# keke-pet-v2

./: .gitignore  index.html  package.json
.github/workflows/: build.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/modules/: event-bus.js  renderer.js  ui.js
src/styles/: main.css
